hphp/test/slow/like_types/like_casts_bad2.php.expectf
dict(2) {
  [1]=>
  int(1)
  ["a"]=>
  string(1) "a"
}

Fatal error: Uncaught exception 'InvalidArgumentException' with message 'Invalid dict key: expected a key of type int or string, float given' in %s/test/slow/like_types/like_casts_bad2.php:4
Stack trace:
%A
